--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container ">
-        <div class="py-5 text-center bg-secondary text-white ">
+        <div class="py-5 text-center bg-warning text-white upimgcss">
             <h1 class="mb-3">Upload Image</h1>
             <form action="" method="post" enctype="multipart/form-data">
                 {%csrf_token%}
@@ -10,15 +10,11 @@
                 <input type="submit" class="btn btn-danger">
             </form>
         </div>
-        <div class="row">
+        <div class="row mt-5">
             {% for img in img %}
-            <div class="col-3">
-                <div class="card m-2">
-                    <a href="{% url 'photo' img.id %}"><img src="{{img.photo.url}}" alt="" class="card-img-top" height="200px"></i></a>
-                    <div class="card-footer">
-                        <small class="text-muted">download</small>
-                        <a href="{{img.photo.url}}"  download><i class="fa-solid fa-download fa-bounce text-dark ml-3"></i></a>
-                    </div>
+            <div class="col-4">
+                <div class="card m-1">
+                    <a href="{% url 'photo' img.id %}"><img src="{{img.photo.url}}" alt="" class="card-img-top divauto" height="200px"></i></a>
                 </div>
             </div>
             {% endfor%}
