download button apply

--- a/myapp/templates/myapp/photoshow.html
+++ b/myapp/templates/myapp/photoshow.html
@@ -10,6 +10,7 @@
     <div class="row justify-content-center mt-5">
         <div class="col-5" >
             <img src="{{img.photo.url}}" alt="" class="card-img-top divauto" height="700px" style="margin-bottom:30px;">
+            <a href="{{img.photo.url}}" class="btn btn-primary" download>Download</a>
         </div>
     </div>
 </div>
