--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <div class="container ">
-        <div class="py-5 text-center bg-warning text-white upimgcss">
-            <h1 class="mb-3">Upload Image</h1>
-            <form action="" method="post" enctype="multipart/form-data">
+        <div class="py-3 text-center bg-warning text-white upimgcss">
+            <h1 class="mb-2">Upload Image</h1>
+            <form action="" method="post" enctype="multipart/form-data" class="mt-3">
                 {%csrf_token%}
                 {{form}}
                 <input type="submit" class="btn btn-danger">
@@ -12,9 +12,9 @@
         </div>
         <div class="row mt-5">
             {% for img in img %}
-            <div class="col-4">
+            <div class="col-3">
                 <div class="card m-1">
-                    <a href="{% url 'photo' img.id %}"><img src="{{img.photo.url}}" alt="" class="card-img-top divauto" height="200px"></i></a>
+                    <a href="{% url 'photo' img.id %}" class="image-zoom"><img src="{{img.photo.url}}" alt="" class="card-img-top "></i></a>
                 </div>
             </div>
             {% endfor%}
@@ -22,17 +22,3 @@
     </div>
 {% endblock %}
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
