--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -1,20 +1,12 @@
 {% extends 'myapp/base.html' %}
 
 {% block content %}
-    <div class="container ">
-        <div class="py-3 text-center bg-warning text-white upimgcss">
-            <h1 class="mb-2">Upload Image</h1>
-            <form action="" method="post" enctype="multipart/form-data" class="mt-3">
-                {%csrf_token%}
-                {{form}}
-                <input type="submit" class="btn btn-danger">
-            </form>
-        </div>
+    <div class="container-fluid ">
         <div class="row mt-5">
             {% for img in img %}
             <div class="col-3">
                 <div class="card m-1">
-                    <a href="{% url 'photo' img.id %}" class="image-zoom"><img src="{{img.photo.url}}" alt="" class="card-img-top "></i></a>
+                    <a href="{% url 'photo' img.id %}" class="image-zoom">c</a>
                 </div>
             </div>
             {% endfor%}
