--- a/myapp/static/myapp/css/home.css
+++ b/myapp/static/myapp/css/home.css
@@ -8,9 +8,21 @@
     background-color: rgb(63, 169, 74);
 }
 .image-zoom img {
-    transition: transform 0.0s ease;
+    transition: all 0.5s ease-in-out;
 }
 .image-zoom:hover img {
     transform: scale(1.2);
+}
+/* .basebody{
+    background-color: #EDEDE9;
+} */
+.sticky-top {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0; /* Stick to the top of the viewport */
+    padding: 5px;
+}
+.btn-border{
+    border-radius: 50px;
 }
 
