--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -14,16 +14,16 @@
     <link rel="stylesheet" type="text/css" href="{% static 'myapp/css/home.css' %}">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-3">
+<body class="basebody">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-3 sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="{% static  'myapp/image/Picsplash.png' %}" alt=""
                     class="card-img-top "></img></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <input class="form-control me-2 btn-border" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-dark btn-border" type="submit">Search</button>
                     </form>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Explore</a>
@@ -43,6 +43,7 @@
             </div>
         </div>
     </nav>
+    
     {% block content %} {% endblock content %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
