--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -1,12 +1,12 @@
 {% extends 'myapp/base.html' %}
 
 {% block content %}
-    <div class="container-fluid ">
+    <div class="container ">
         <div class="row mt-5">
             {% for img in img %}
             <div class="col-3">
                 <div class="card m-1">
-                    <a href="{% url 'photo' img.id %}" class="image-zoom">c</a>
+                    <a href="{% url 'photo' img.id %}" class="image-zoom"><img src="{{img.photo.url}}" alt="" class="card-img-top "></img></a>
                 </div>
             </div>
             {% endfor%}
