--- a/myapp/templates/myapp/photoshow.html
+++ b/myapp/templates/myapp/photoshow.html
@@ -1,16 +1,11 @@
 {% extends 'myapp/base.html' %}
 {% block content %}
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="py-5 text-center text-white phoclick col-5">
-            <h1 class="mb-3">You clicked on this image</h1>
-        </div>
-    </div>
-    <div class="row justify-content-center mt-5">
-        <div class="col-5" >
-            <img src="{{img.photo.url}}" alt="" class="card-img-top divauto" height="700px" style="margin-bottom:30px;">
-            <a href="{{img.photo.url}}" class="btn btn-primary" download>Download</a>
+<div class="container-fluid">
+    <div class="row justify-content-center mt-3">
+        <div>
+            <img src="{{img.photo.url}}" alt="" class="card-img-top divauto" style="margin-bottom:30px;">
+            <a href="{{img.photo.url}}" class="btn btn-primary mb-5" download>Download</a>
         </div>
     </div>
 </div>
