--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'myapp/css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'myapp/css/styles.css' %}">
 </head>
 
 <body class="basebody">
