--- a/myapp/static/myapp/css/styles.css
+++ b/myapp/static/myapp/css/styles.css
@@ -1,21 +1,4 @@
-.upimgcss {
-    border-radius: 15px;
-    /* border: 1px solid black; */
-}
-.phoclick{
-    border-radius: 15px;
-    /* border: 1px solid black; */
-    background-color: rgb(63, 169, 74);
-}
-.image-zoom img {
-    transition: all 0.2s ease-in-out;
-}
-.image-zoom:hover img {
-    transform: scale(1.1);
-}
-/* .basebody{
-    background-color: #EDEDE9;
-} */
+
 .sticky-top {
     position: -webkit-sticky;
     position: sticky;
@@ -42,6 +25,41 @@
     border-radius: 5px;
     cursor: pointer;
     background: white;
+}
+.mycontainer{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    background-color: rgb(179, 182, 186);
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+}
+.picshow{
+    width: 50%;
+    height: 70%;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+}
+.img-card{
+    width: 70%;
+    height: 80%;
+    object-fit: cover;
+    margin-top: 30px;
+    margin-bottom: 40px;
+    border-radius: 5px;
+}
+.button{
+    width: 120px;
+    height: 30px;
+    background-color: #000;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-left: 20px;
+    justify-content: center;
+    display: flex;
 }
 
 
