--- a/myapp/static/myapp/css/styles.css
+++ b/myapp/static/myapp/css/styles.css
@@ -13,7 +13,7 @@
     width: 100%;
     padding: 40px;
     background: white;
-    columns: 4;
+    columns: 3;
     column-gap: 20px;
 }
 
@@ -30,7 +30,7 @@
     width: 100%;
     height: 100%;
     background: transparent;
-    background-color: rgb(179, 182, 186);
+    background-color: #FFFFFF;
     display: flex;
     justify-content: center;
     /* align-items: center; */
@@ -60,6 +60,11 @@
     margin-left: 20px;
     justify-content: center;
     display: flex;
+    transform: translateX(1.3);
+}
+.button:hover{
+    transition: all 0.2s ease-in-out;
+
 }
 
 
