--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -15,6 +15,7 @@
 </head>
 
 <body class="basebody">
+    {% block header %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-3 sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="{% static  'myapp/image/Picsplash.png' %}" alt=""
@@ -43,6 +44,7 @@
             </div>
         </div>
     </nav>
+    {% endblock header %}
     
     {% block content %} {% endblock content %}
 
