--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -3,7 +3,7 @@
 {% block content %}
     <section class="gallery">
         {% for img in img %}
-        <a href="{% url 'photo' img.id %}"><img src="{{img.photo.url}}" alt="image" class="gallery-img"></img></a>
+        <a href="{% url 'photo' img.id %}" target="_self"><img src="{{img.photo.url}}" alt="image" class="gallery-img"></img></a>
         {% endfor%}
     </section>
 {% endblock content %}
